Updates from Overleaf

--- a/before meetings/250903_Charles.tex
+++ b/before meetings/250903_Charles.tex
@@ -86,62 +86,95 @@
 
 
 
-\begin{frame}{Last meeting}
-Last meeting we talked about:
-\begin{itemize}
-    \item Institutional setting: centralized annuities market with two stages 1. initial offers and 2. external offers: bargaining (?)  
-    \begin{itemize}
-        \item Actually NO bargaining [conversations with intermediaries]
-    \end{itemize}
-    \item Possible information disclosure between first and second stage 
-    \begin{itemize}
-        \item Not the case [conversations with intermediaries]
-    \end{itemize}
-
-    \item Previous research question: what is the impact of the second stage [policy concern, was replaced by an auction]. 
-    \begin{itemize}
-        \item  many platforms combine posted prices with bargaining (e.g. Zillow)
-    \end{itemize}
-\end{itemize}
-\end{frame}
 
 
 
 
 
 \begin{frame}{This meeting: research question}
-Possible research questions are: 
 
 
 
- \begin{enumerate}
+ \begin{itemize}
+
         \item One reason that the external offers are strong appears to be that there are intermediaries. 
-
-        \item Firms differ in terms of their mortality. 
         
-   
-        \item Impact of the seconds stage?  [Varian mdoel of shoppers vs non-shoppers in a differentiated product industry] -> could inform design of insurance markets.
-
-    \end{enumerate}
-    
+        \item There is difference in survival rates among firms. 
+        
+        \item Is there learning? -> still to explore. 
 
 
 
-
-\begin{itemize}
-   
-   
-    \item Research question: is it interesting? 
-
-
-     
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Frame Title}
+Selection? some firms better at predicting? 
+ \begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_survival_curves_by_age_top_firms.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
+
+\end{frame}
+ 
+
+\begin{frame}{Frame Title}
+Heterogeneity in terms of relying on external offers. 
+ \begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_variation_share_external.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
+\end{frame}
+ 
+
+\begin{frame}{Frame Title}
+ \begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_external_offers_by_intermediary.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
+\end{frame}
+
+
+
+ \begin{frame}{Frame Title}
+ \begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_intermediary_search_box.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
 \end{frame}
 
 
  
+ \begin{frame}{Frame Title}
+ Intermediaries affect search. 
+ \begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_highest_by_intermediary_type.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
+\end{frame}
 
 
+ 
+\begin{frame}{Frame Title}
+
+\begin{figure}
+     \centering
+     \includegraphics[width=0.6\linewidth]{figures//IE4/IE4_external_acceptance_by_intermediary.png}
+     %\caption{Enter Caption}
+     \label{fig:placeholder}
+ \end{figure}
+\end{frame}
+ 
 
 
 
